@@ -1,3 +1,7 @@
+2007-08-06 Paul Lindner <lindner@inuus.com>
+	* Fix crash when using -P and -d flags on x86_64
+	  with latest libevent release.
+
 2007-07-08  Steven Grimm  <sgrimm@facebook.com>
 
 	* Item stats commands weren't thread-safe; wrap them with locks
